# ExitGuardian

./: .gitignore  Makefile  README.md  requirements.txt
.github/agents/: requirements-reviewer.agent.md
docs/: conf.py  index.md
docs/_static/: custom.css
docs/architecture/: Design-Decisions.md  README.md  container.md  context.md  design_decisions.md  gateway.md  gateway_arch.puml  gateway_hw.md  gateway_sw.md  overview.md  sensor.md  seq_alert.puml  state_machine.md  state_machine.puml
docs/architecture/diagrams/: container_view.puml  context.puml  gateway_arch.puml  gateway_hw_arch.puml  gateway_sw_arch.puml  rf_sequence.puml  sensor_arch.puml  sensor_hw_arch.puml  seq_pairing.puml  seq_remove.puml  state_machine.puml  system_arch.puml  top_level_state_machine.puml
docs/references/application_notes/gateway/: CC1101_CC1190EM_869MHz_PARTLIST_2_1_0.xls
docs/references/datasheets/: ANT-868-HExxpdf
docs/requirements/: requirements.md
finance/: current_cost_summary.md
finance/budgets/: budget_plan.md  categories.yaml
finance/ledger/: funding_log.csv  spend_log.csv
hardware/gateway/: #auto_saved_files#  buzzer.kicad_sch  gateway.kicad_pcb  gateway.kicad_pro  gateway.kicad_sch  gateway_BOM.csv  mcu.kicad_sch  rf.kicad_sch  sym-lib-table  untitled.kicad_sch
hardware/gateway/libraries/symbols/: 2462.kicad_sym  ANT-868-HESM.kicad_sym  ATTINY406-MFR.kicad_sym  B3F-1070.kicad_sym  BLM18KG601SN1D.kicad_sym  CC1101RGPR.kicad_sym  CD43NP-100MC.kicad_sym  G8250041000YEU.kicad_sym  IRLML6402TRPBF.kicad_sym  LT1615ES5-1#TRMPBF.kicad_sym  M20-9770342.kicad_sym  MASM-14R-8-10.kicad_sym  MB85RC64TAPNF-G-BDERE1.kicad_sym  MBR0520LT3G.kicad_sym  MIC4427YM.kicad_sym  NX3225GA-26_000M-STD-CRG-2.kicad_sym  PKMCS1818E20A0-R1.kicad_sym  STM8L151K4T6.kicad_sym  TL6120DF160QG.kicad_sym  (+4 more)
hardware/gateway/rev0/: buzzer_rev0.kicad_sch  gateway.kicad_sch  gateway_rev0.kicad_pro  gateway_rev0.kicad_sch  mcu_rev0.kicad_sch  rf_rev0.kicad_sch  sym-lib-table
hardware/gateway/rev1/: buzzer_rev1.kicad_sch  fp-lib-table  gateway_rev1.kicad_pcb  gateway_rev1.kicad_pro  gateway_rev1.kicad_sch  mcu_rev1.kicad_sch  rf_rev1.kicad_sch  sym-lib-table
hardware/sensor/: sensor.kicad_pcb  sensor.kicad_pro  sensor.kicad_sch  sensor.step  sensor_BOM.csv  sym-lib-table
hardware/sensor/output/: sensor-bottom-pos.csv  sensor-job.gbrjob  sensor-top-pos.csv  sensor.step  sensor_BOM.csv
mechanical/gateway/: SIC6-12-4W.stp  gateway.20251016-102954.FCBak  gateway.FCStd
mechanical/sensor/: SIC5-9-2W.stp  sensor.20251009-154757.FCBak  sensor.20251009-161910.FCBak  sensor.FCStd
software/gateway/: CMakeLists.txt  readme.md
software/gateway/.devcontainer/: Dockerfile  devcontainer.json
software/gateway/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  fw.adb  fw.asm  fw.cdb  fw.ihx  fw.lk  fw.lst  fw.rel  fw.rst  fw.sym
software/gateway/cmake/: toolchain-stm8-sdcc.cmake
software/gateway/hal/: CMakeLists.txt
software/gateway/hal/inc/: stm8l15x.h  stm8l15x_conf.h
software/gateway/hal/src/: stm8l15x_adc.c  stm8l15x_clk.c  stm8l15x_gpio.c  stm8l15x_i2c.c  stm8l15x_spi.c  stm8l15x_tim1.c  stm8l15x_usart.c
software/gateway/inc/: alert_manager.h  board.h  button.h  buzzer.h  cc1101.h  feram.h  led.h  log.h  mode_manager.h  reed.h  sensor_manager.h
software/gateway/linker/: memory.md
software/gateway/src/: alert_manager.c  board.c  button.c  buzzer.c  cc1101.c  feram.c  led.c  log.c  main.c  mode_manager.c  reed.c  sensor_manager.c  startup.s  vectors.s
(+98 files in other folders)
